--- a/ShameBoard/styles.css
+++ b/ShameBoard/styles.css
@@ -15,11 +15,13 @@
 body{
 	background: #9ecae0;
 }
+
 /* properties of Header*/
 h1{
 	font-size: 28px;
 	padding-top: 10px;
-	margin-left: 240px;
+	text-align: center;
+	
 }
 /* properties of wrapper div */
 .wrapper{
